service/service-lab.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"system":"secondary"},"name":"service-lab","namespace":"accounting","resourceVersion":"404676","uid":"a197ff9c-3c6b-4b8e-ad16-4b3bffda2409"},"spec":{"clusterIP":"10.99.77.50","clusterIPs":["10.99.77.50"],"externalTrafficPolicy":"Cluster","internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"nodePort":31171,"port":80,"protocol":"TCP","targetPort":80}],"selector":{"system":" [...]
  creationTimestamp: "2025-01-31T17:20:41Z"
  labels:
    system: secondary
  name: service-lab
  namespace: accounting
  resourceVersion: "406207"
  uid: a197ff9c-3c6b-4b8e-ad16-4b3bffda2409
spec:
  clusterIP: 10.99.77.50
  clusterIPs:
  - 10.99.77.50
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31171
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    system: secondary
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
